@@ -21,6 +21,11 @@ load "pk-dump-minimal.pk";
 // FIXME be endian-correct
 // FIXME offset<long,N> -> offset<ulong,N>
 
+// `poked.c' will initialize it to the right value.
+var __poked_pdap_version = -1;
+
+fun poked_pdap_version = int<32>: { return __poked_pdap_version; }
+
 var __poked_restart_p = 0;
 var __poked_exit_p = 0;
 
